--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "girls_asks_boys_answers",
-  "short_name": "girls_asks_boys_answers",
+  "name": "quiz_app",
+  "short_name": "quiz_app",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0175C2",
