--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "girls_asks_boys_answers" "\0"
+            VALUE "FileDescription", "quiz_app" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "girls_asks_boys_answers" "\0"
+            VALUE "InternalName", "quiz_app" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "girls_asks_boys_answers.exe" "\0"
-            VALUE "ProductName", "girls_asks_boys_answers" "\0"
+            VALUE "OriginalFilename", "quiz_app.exe" "\0"
+            VALUE "ProductName", "quiz_app" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
